# acp-chat-ui-react

./: .bifrost.yaml  .gitignore  .npmrc  AGENTS.md  ARCHITECTURE_REVIEW.md  LICENSE  REFACTORING_PLAN.md  eslint.config.js  package.json  pnpm-lock.yaml  test-replay-integration.js  tsconfig.eslint.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.husky/: pre-commit
.sisyphus/: boulder.json
crates/acp-bridge/: Cargo.toml
crates/acp-bridge/bindings/: BridgeEnvelope.ts  BridgeMessage.ts  BridgeStatus.ts
crates/acp-bridge/fixtures/scripts/: code-example.xml  multi-session.xml  simple-thought.xml
crates/acp-bridge/src/: bridge_proxy.rs  lib.rs  main.rs  tokenizer.rs
crates/acp-bridge/src/contract/: bridge_contract.rs  envelope.rs  message.rs  mod.rs
crates/acp-bridge/src/modes/: dynamic.rs  mod.rs  proxy.rs  replay.rs  replay_v2.rs  replay_v2_streaming.rs
crates/acp-bridge/src/script/: chunker.rs  event_gen.rs  mod.rs  writer.rs
crates/acp-bridge/src/server/: mod.rs
crates/acp-ws-bridge/: Cargo.toml  TESTING.md  cobertura.xml  tarpaulin-report.html
crates/acp-ws-bridge/bindings/: BridgeEnvelope.ts  UnsupportedVersionError.ts
crates/acp-ws-bridge/docs/: extra-data-design.md
crates/acp-ws-bridge/src/: lib.rs  test_utils.rs
crates/acp-ws-bridge/src/contract/: envelope.rs  message.rs  mod.rs
crates/acp-ws-bridge/src/server/: mod.rs
docs/: TESTING.md  integration-testing-patterns.md  performance-baseline.md  v1-references.md  v1-v2-comparison.md  wiki-structure.md
docs/wiki/: Home.md  (+16 more)
fixtures/: sample-replay.jsonl  thought-tool-replay.jsonl
(+260 files in other folders)
