[package]
name = "acp-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WebSocket bridge for ACP stdio sessions"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "11", features = ["serde-json-impl"] }
clap = { version = "4", features = ["derive"] }
which = "7"
tiktoken-rs = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"