[package]
name = "harms_haus_acp_ws_bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Reusable WebSocket bridge for ACP communication"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
ts-rs = { version = "11", features = ["serde-json-impl"] }
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"
